infra/k8s/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-sts
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-sts
  template:
    metadata:
      labels:
        app: postgresql-sts
    spec:
      containers:
        - name: postgresql-db
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgresql-pv-claim
