infra/k8s/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jaeger
  name: jaeger
spec:
  selector:
    app: jaeger-deployment
  ports:
    - name: "5775"
      port: 5775
      protocol: UDP
      targetPort: 5775
    - name: "6831"
      port: 6831
      protocol: UDP
      targetPort: 6831
    - name: "6832"
      port: 6832
      protocol: UDP
      targetPort: 6832
    - name: "5778"
      port: 5778
      targetPort: 5778
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "14250"
      port: 14250
      targetPort: 14250
    - name: "9411"
      port: 9411
      targetPort: 9411
