infra/k8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql-sts
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
