infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix 
            backend:  
              service:
                name: api
                port:
                  number: 8080
    - host: adminer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: adminer
                port:
                  number: 8080
    - host: jaeger.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: jaeger
                port:
                  number: 16686
